--- a/teste.html
+++ b/teste.html
@@ -2,67 +2,148 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Youtube</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <style type="text/css">
-        body{
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            height: 24px;
-            width: 86px;
-        }
+    <title> Teste </title>
+
+    <style>
+    body{
+        margin: 0;
+        padding: 0;
+    }
+    .img{
+        background-image: url("bg.jpg");
+        background-size: cover;
+        height: 100vh;
+    }
+    .yt-backdrop *{
+        box-sizing: border-box;
+    }
+    .yt-backdrop {
+        background-color: rgba(0, 0, 0, 0.6);
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+    }
+
+    .yt-backdrop .modal-container {
+        font-family: Helvetica, Arial, sans-serif;
+        color: #fff;
+        position: absolute;
+        top: 100px;
+        bottom: 100px;
+        right: 15px;
+        left: 15px;
+        background-color: #2c2f33;
+        margin: 0;
+        border-radius: 4px;
+        display: flex;
+        flex-direction: column;
+
+    }
+    .yt-backdrop .modal-header {
+        background-color: #373a3d;
+        box-shadow: -6px 2px 19px -9px rgba(0,0,0,0.7)
+    }
+    .yt-backdrop .modal-header button{
+        position: absolute;
+        top: 0;
+        right: 0;
+        border: none;
+        background-color: #373a3d;
+        color: #fff;
+        padding: 10px 15px;
+        font-size: 20px;
+    }
+    .yt-backdrop .modal-header h2{
+        margin: 0;
+        padding: 15px 25px;
+    }
+    .yt-backdrop .modal-body {
+        box-shadow: -6px 2px 19px -9px rgba(0,0,0,0.7);
+        flex: auto;
+        padding: 15px;
+    }
+    .yt-backdrop .modal-footer {
+        background-color: #282b2e;
+        padding-top: 10px;
+    }
+    .yt-backdrop .modal-footer button{
+        margin: 10px 13px;
+        border-radius: 4px;
+        padding: 10px 10px;
+        color: #fff;
+        font-size: 1em;
+        font-weight: bold;
+        width: calc(50% - 30px);
+        border: none;
+    }
+    .yt-backdrop .modal-footer button.ok{
+        background-color: #91c46b;
+    }
+    .yt-backdrop .modal-footer button.cancel{
+        background-color: #a5acb4;
+    }
+
+    .yt-backdrop.open {
+        animation: fadein 1s;
+    }
+    .yt-backdrop.close{
+        animation: fadeout 1s;
+    }
+    @keyframes fadein {
+        from { opacity: 0; }
+        to   { opacity: 1; }
+    }
+    @keyframes fadeout {
+        from { opacity: 1; }
+        to   { opacity: 0; }
+    }
     </style>
+
 </head>
-<script src="https://apis.google.com/js/platform.js"></script>
-
 <body>
-<script>
-    var YOUTUBE_CHANNEL = "GoogleDevelopers";
-    var YOUTUBE_CHANNEL_ID = "";
+    <div class="yt-backdrop open">
+        <div class="modal-container">
+            <div class="modal-header">
+                <h2>Lorem Ipsum</h2>
+                <button class="close">X</button>
+            </div>
+            <div class="modal-body">
+                <h3>Lorem ipsum sit dolor</h3>
+                <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti aut facilis eum pariatur, quo tempora dicta iure! Laborum placeat modi a perferendis, minima quasi aliquam totam aspernatur. Eligendi, voluptates, minima?
+                </p>
+            </div>
+            <div class="modal-footer">
+                <button class="cancel">Cancelar</button>
+                <button class="ok">OK</button>
+            </div>
+        </div>
+    </div>
+    <div class="img"></div>
+        <script type="text/javascript">
+            (function() {
+                "use strict";
 
-    if (YOUTUBE_CHANNEL_ID){
-        var text = "<div class='g-ytsubscribe' "+
-        "data-channelid='"+YOUTUBE_CHANNEL_ID+"'"+ "data-layout='default' data-count='hidden'></div>";
-    }
-    else if (YOUTUBE_CHANNEL){
-        var text = "<div class='g-ytsubscribe' "+
-        "data-channel='"+YOUTUBE_CHANNEL+"'"+
-        "data-layout='default' data-count='hidden'></div>";
-    }
+                var yt_backdrop = document.querySelector(".yt-backdrop");
+                var listener = yt_backdrop.addEventListener("click", function(ev){
+                        if (ev.target.nodeName == "BUTTON") {
+                                yt_backdrop.classList.add("close");
+                                yt_backdrop.removeEventListener("click",listener);
+                                yt_backdrop.addEventListener("animationend", function(){
+                                    yt_backdrop.parentNode.removeChild(yt_backdrop);
+                                }, true);
+                        }
+                                console.log(ev.target.nodeName);
+                });
 
 
-    function getParam(name, url) {
-        if (!url) url = window.location.href;
-        name = name.replace(/[\[\]]/g, "\\$&");
-        var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-            results = regex.exec(url);
-        if (!results) return null;
-        if (!results[2]) return '';
-        return decodeURIComponent(results[2].replace(/\+/g, " "));
-    }
-    if (navigator.userAgent.match(/Android/i)) {
-        var h = getParam("h") || window.innerHeight;
-        var w = getParam("w") || window.innerWidth;
-    }else{
-        var w = getParam("w") || 86;
-        var h = getParam("h") || 24;
-    }
-    var num_w = Math.ceil(w/86);
-    var num_h = Math.ceil(h/24);
-    var w_i = num_w*86;
-    var h_i = num_h*24;
+            }());
 
-    var body = document.querySelector("body");
-    if (w) {body.style.width = w_i+"px";}
-    if (h) {body.style.height = h_i+"px";}
 
-    var num_total = num_h*num_w;
+        </script>
 
-    for (var i = 0; i < num_total; i++) {
-        document.write(text);
-    }
-
-</script>
 </body>
 </html>
