--- a/teste.html
+++ b/teste.html
@@ -1,149 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title> Teste </title>
+<script src="https://apis.google.com/js/platform.js"></script>
 
-    <style>
-    body{
-        margin: 0;
-        padding: 0;
+<script>
+  function onYtEvent(payload) {
+    if (payload.eventType == 'subscribe') {
+      // Add code to handle subscribe event.
+    } else if (payload.eventType == 'unsubscribe') {
+      // Add code to handle unsubscribe event.
     }
-    .img{
-        background-image: url("bg.jpg");
-        background-size: cover;
-        height: 100vh;
+    if (window.console) { // for debugging only
+      window.console.log('YT event: ', payload);
     }
-    .yt-backdrop *{
-        box-sizing: border-box;
-    }
-    .yt-backdrop {
-        background-color: rgba(0, 0, 0, 0.6);
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        left: 0;
-    }
+  }
+</script>
 
-    .yt-backdrop .modal-container {
-        font-family: Helvetica, Arial, sans-serif;
-        color: #fff;
-        position: absolute;
-        top: 100px;
-        bottom: 100px;
-        right: 15px;
-        left: 15px;
-        background-color: #2c2f33;
-        margin: 0;
-        border-radius: 4px;
-        display: flex;
-        flex-direction: column;
-
-    }
-    .yt-backdrop .modal-header {
-        background-color: #373a3d;
-        box-shadow: -6px 2px 19px -9px rgba(0,0,0,0.7)
-    }
-    .yt-backdrop .modal-header button{
-        position: absolute;
-        top: 0;
-        right: 0;
-        border: none;
-        background-color: #373a3d;
-        color: #fff;
-        padding: 10px 15px;
-        font-size: 20px;
-    }
-    .yt-backdrop .modal-header h2{
-        margin: 0;
-        padding: 15px 25px;
-    }
-    .yt-backdrop .modal-body {
-        box-shadow: -6px 2px 19px -9px rgba(0,0,0,0.7);
-        flex: auto;
-        padding: 15px;
-    }
-    .yt-backdrop .modal-footer {
-        background-color: #282b2e;
-        padding-top: 10px;
-    }
-    .yt-backdrop .modal-footer button{
-        margin: 10px 13px;
-        border-radius: 4px;
-        padding: 10px 10px;
-        color: #fff;
-        font-size: 1em;
-        font-weight: bold;
-        width: calc(50% - 30px);
-        border: none;
-    }
-    .yt-backdrop .modal-footer button.ok{
-        background-color: #91c46b;
-    }
-    .yt-backdrop .modal-footer button.cancel{
-        background-color: #a5acb4;
-    }
-
-    .yt-backdrop.open {
-        animation: fadein 1s;
-    }
-    .yt-backdrop.close{
-        animation: fadeout 1s;
-    }
-    @keyframes fadein {
-        from { opacity: 0; }
-        to   { opacity: 1; }
-    }
-    @keyframes fadeout {
-        from { opacity: 1; }
-        to   { opacity: 0; }
-    }
-    </style>
-
-</head>
-<body>
-    <div class="yt-backdrop open">
-        <div class="modal-container">
-            <div class="modal-header">
-                <h2>Lorem Ipsum</h2>
-                <button class="close">X</button>
-            </div>
-            <div class="modal-body">
-                <h3>Lorem ipsum sit dolor</h3>
-                <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti aut facilis eum pariatur, quo tempora dicta iure! Laborum placeat modi a perferendis, minima quasi aliquam totam aspernatur. Eligendi, voluptates, minima?
-                </p>
-            </div>
-            <div class="modal-footer">
-                <button class="cancel">Cancelar</button>
-                <button class="ok">OK</button>
-            </div>
-        </div>
-    </div>
-    <div class="img"></div>
-        <script type="text/javascript">
-            (function() {
-                "use strict";
-
-                var yt_backdrop = document.querySelector(".yt-backdrop");
-                var listener = yt_backdrop.addEventListener("click", function(ev){
-                        if (ev.target.nodeName == "BUTTON") {
-                                yt_backdrop.classList.add("close");
-                                yt_backdrop.removeEventListener("click",listener);
-                                yt_backdrop.addEventListener("animationend", function(){
-                                    yt_backdrop.parentNode.removeChild(yt_backdrop);
-                                }, true);
-                        }
-                                console.log(ev.target.nodeName);
-                });
-
-
-            }());
-
-
-        </script>
-
-</body>
-</html>
+<div class="g-ytsubscribe" data-channel="GoogleDevelopers" data-layout="default" data-count="default" data-onytevent="onYtEvent"></div>
